--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -4,9 +4,9 @@
       admin: 
         one: "Administrador"
         other: "Administradores"
-      profile:
-        one: "Perfil"
-        other: "Perfis"
+      user:
+        one: "Usuário"
+        other: "Usuários"
     attributes:
       admin:
         name: "Nome"
@@ -19,7 +19,7 @@
         status: "Status"
         created_at: "Criado em"
         updated_at: "Atualizado em"
-      profile:
+      user:
         name: "Nome"
         description: "Descrição"
         status: "Status"
